--- a/src/style.css
+++ b/src/style.css
@@ -83,6 +83,10 @@
     src: url("/resources/fonts/Lato-ThinItalic.ttf");
   }
 
+  html {
+    @apply scroll-pt-16;
+  }
+
   body {
     @apply font-sans;
   }
@@ -103,12 +107,26 @@
     @apply text-3xl font-bold my-4;
   }
 
+  h1 a {
+    @apply text-3xl font-bold my-4 text-black;
+  }
+
   h2 {
     @apply text-2xl font-bold my-4;
   }
 
+  h2 a {
+    @apply text-2xl font-bold my-4 text-black;
+    @apply hover:no-underline;
+  }
+
   h3 {
     @apply text-xl font-bold my-4;
+  }
+
+  h3 a {
+    @apply text-xl font-bold my-4 text-black;
+    @apply hover:no-underline;
   }
 
   p {
